--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,36 +1,35 @@
-# This is a basic workflow to help you get started with Actions
+name: build
 
-name: CI
-
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the main branch
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+  schedule:
+    - cron: 0 * * * *
 
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
-    runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
+  win-x64:
+    runs-on: windows-latest
+
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
+      
+      - name: get SDL2
+        run: curl https://www.libsdl.org/release/SDL2-devel-2.0.14-VC.zip -o SDL2
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
+      - name: Get FNA3D
+        run: git clone --recursive https://github.com/andreakarasho/FNA3D
+          
+      - name: build FNA3D STATIC
         run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+          cd FNA3D
+          mkdir build
+          cmake -DCMAKE_BUILD_TYPE=Release -DFNA3D_STATIC=ON
+          cmake --build build/ --config Release
+          
+      - name: build FNA3D SHARED
+        run: |
+          cd FNA3D
+          mkdir build
+          cmake -DCMAKE_BUILD_TYPE=Release -DFNA3D_STATIC=OFF
+          cmake --build build/ --config Release
+
+
