--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,9 +14,11 @@ jobs:
       - uses: actions/checkout@v2
       
       - name: get SDL2
-        run: curl https://www.libsdl.org/release/SDL2-devel-2.0.14-VC.zip -o SDL2
+        run: |
+          curl https://www.libsdl.org/release/SDL2-devel-2.0.14-VC.zip -o SDL2.zip
+          7z x SDL2.zip
 
-      - name: Get FNA3D
+      - name: get FNA3D
         run: git clone --recursive https://github.com/andreakarasho/FNA3D
           
       - name: build FNA3D STATIC
