--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -47,7 +47,7 @@ jobs:
      - name: get SDL2
        run: |
          sudo apt-get update -y
-         sudo apt-get install -y libsdl2-dev
+         sudo apt install libsdl2-dev libsdl2-${{ env.sdl_version }} -y
      
      - name: get FNA3D
        run: git clone --recursive https://github.com/andreakarasho/FNA3D
